# interview-as-a-service

./: .env.example  Dockerfile  README.md  docker-compose.prod.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
bookings/: models.py  views.py
bookings/migrations/: 0001_initial.py
dashboard/: views.py
interview_service/settings/: base.py  dev.py  prod.py
interviewers/: admin.py  models.py  views.py
interviewers/migrations/: 0001_initial.py  0002_humanlanguage_interviewer_languages.py
static/css/: styles.css
templates/: base.html
templates/bookings/: calendar.html
templates/components/: interviewer_card.html
templates/dashboard/: booking_detail.html
templates/dashboard/partials/: profile_form.html
templates/interviewers/: detail_modal.html  list.html
templates/pages/: home.html
tests/: factories.py  test_models.py  test_views.py
